# KDU-2026-AI

./: .env.example  .gitignore  Dockerfile  HuggingFace_Transformers_Exercise1.ipynb  LangGraph_StockAgent_DesignPlan.docx  README.md  agents.yaml  agents_config.py  agents_runtime.py  alembic.ini  app.py  app_streamlit.py  circuit_breaker.py  config.py  context.py  context_destruction.py  crewai_handson_lab.ipynb  docker-compose.yml  generate_project.py  main.py  math_of_meaning.py  multimodal_ai_assistant_design.md  multimodal_assistant.db  pipeline.py  pyproject.toml  pytest.ini  requirements.txt  smoke_test.py  tasks.yaml  tools.py  when_search_fails.py
MCP/: langchain_resume_mcp.py
agents/: executor.py
alembic/: env.py
api/: main.py
app/: main.py
backend/: requirements.txt
config/: bedrock_guardrail_policy.example.json  config.yaml  loader.py
db/: sqlite_store.py
docs/: architecture.md
executor/: __init__.py  executor_agent.py
frontend/: package-lock.json  package.json  tsconfig.json
llm/: client.py
memory/: __init__.py  case_facts.py  compaction.py  extractor.py  history.py  store.py
middleware/: style.py  user_context.py
models/: __init__.py  qa.py  refiner.py  router.py  schemas.py  summarizer.py
observability/: __init__.py  logger.py
phases/: __init__.py  phase1_run.py  phase2_run.py  phase3_run.py  phase4_run.py  phase5_run.py
planner/: __init__.py  planner_agent.py  schema.py
preprocessing/: __init__.py  preprocessor.py
prompts/: manager.py
rag_chatbot/: app.py  config.py  pipeline.py  requirements.txt
reports/: README.md
router/: budget_guard.py  classifier.py  engine.py
src/: __init__.py  config.py  orchestrator.py  upload_service.py
(+183 files in other folders)
