[project]
name = "kdu-2026-ai"
version = "0.1.0"
description = "Real-time voice-enabled multi-agent customer service system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
