[project]
name = "kdu-2026-ai-safety-lab"
version = "1.0.0"
description = "Production guardrails, AWS Bedrock Guardrails, and observability hands-on lab."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "boto3>=1.34.0",
  "langsmith>=0.1.120",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
safety-lab = "safety_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safety_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
